modificada e documentada a funcionalidade de buscar filmes
